--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Smile</title>
+    <title>HappyPeople</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="/static/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css"/>
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd; margin-bottom: 30px; width: 100%">
     <a class="navbar-brand" href="/">
         <div style="font-size: 45px; margin-left: 30px">
-            <span style="font-weight: bold">Happy</span>Pet
+            <span style="font-weight: bold">Happy</span>People
         </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -33,7 +33,6 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/">Home</a>
-            <a class="nav-item nav-link" href="/breed-list">Breed Info</a>
             <a class="nav-item nav-link" href="/statistical-data">Statistical Results</a>
         </div>
     </div>
